--- a/css3手琴风.html
+++ b/css3手琴风.html
@@ -109,7 +109,7 @@ input[type=radio]:checked + label::after {
 }
 </style>
 <body>
-<div class="wrapper">
+<div class="pagebody">
     <div class="list">
         <p>好吃哒</p>
         <div class="tab">
