--- a/PC常用端横向导航.html
+++ b/PC常用端横向导航.html
@@ -1,4 +1,4 @@
-<!docttpe html>
+<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
