--- a/PC常用端横向导航.html
+++ b/PC常用端横向导航.html
@@ -39,7 +39,7 @@ cite,em,i{font-style:normal;}
 .menu ul li.current ul li a:hover{background:#333;}
 
 </style>
-<script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
+<script src="http://code.jquery.com/jquery-1.8.0.min.js"></script>
 <script>
 	$(function(){
 		//---------主菜单切换效果-----------
